src/test/ui/unreachable/unreachable-loop-patterns.stderr
error: unreachable pattern
  --> $DIR/unreachable-loop-patterns.rs:8:9
   |
LL |     for _ in x {}
   |         ^
   |
note: lint level defined here
  --> $DIR/unreachable-loop-patterns.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

